# Sentinel-Scope

./: .env.example  .env.txt  .gitignore  .streamlit:secrets.toml  .streamlit:secrets.toml.txt  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FILE_MANIFEST.md  INTEGRATION_README.md  LICENSE  PROCESS.md  PROJECT_FACT_SHEET.md  QUICK_START_TRANSFER.md  README.md  SECURITY_NOTICE.md  TRANSFER_GUIDE.md  app.py  app_backup.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  secret.toml  sentinelscope.py  test_sentinel.py  transfer_to_sitesentinel.sh
.streamlit/: config.toml  secrets.toml  secrets.toml.example
api/: __init__.py
core/: GapAnalysisResponse  __init__.py  auth.py  classifier.py  compliance_models.py  config.py  constants.py  database.py  dob_alerts.py  dob_engine.py  dob_watcher.py  drone_analytics_bridge.py  enforcement_engine.py  exceptions.py  gap_detector.py  geocoding.py  models.py  processor.py  progress_tracker_ai.py  report.py  report_generator.py  safety_violation_detector.py  utils.py
data/: README.md  mock_frames.csv
data_forensics/: __init__.py  forensics_engine.py
docs/: CONCOMPLYAI_INTEGRATION.md  DRONE_ANALYTICS.md  FAQ.md  PRICING_2026.md  SITE_PROGRESS_TRACKING.md  TECHNICAL_ARCHITECTURE.md  USAGE_GUIDE.md  VISION_AGENT_API.md
examples/: vision_compliance_example.py
migrations/: 003_add_site_evidence.sql  004_final_security_audit.sql
ontology/: __init__.py  enforcement.py  milestones.py  permit_lifecycle.py  violation_states.py
pages/: 1_🎖️_Veteran_Dashboard.py
risk_engine/: __init__.py  engine.py
services/: __init__.py  (+2 more)
(+55 files in other folders)
