[project]
name = "sentinel-scope"
version = "1.0.0"
description = "AI-Augmented Compliance Agent for NYC Construction"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "pydantic>=2.6.0",
    "anthropic>=0.25.0",
    "fpdf>=1.7.2",
    "pandas>=2.2.0",
    "fuzzywuzzy[speedup]>=0.18.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E/F: Basics, I: Import sorting, UP: Upgrade syntax, N: Naming, B: Bugbear (logic errors)
select = ["E", "F", "I", "UP", "N", "B"]
fixable = ["I", "UP"]

[tool.mypy]
files = ["core", "app.py"]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Pydantic specific Mypy settings
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"
